--- a/dating_registration_form/style/style.css
+++ b/dating_registration_form/style/style.css
@@ -23,8 +23,9 @@ h1 {
    
     display: flex;
     align-items: center;
-    width: 40%;
-    height: max(200px, 40vh);
+    width: 45%;
+    /* height: max(200px, 40vh); */
+    height: 60%;
     font-size: 1.3em;
     background-color: white;
     text-align: center;
@@ -32,8 +33,6 @@ h1 {
     box-shadow: 3px 3px 15px rgba(77, 77, 77, .8);
 
 }
-
-
 
 .section_menu {
     display: flex;
@@ -46,7 +45,6 @@ h1 {
     border-radius: 20px;
     color: rgba(208, 208, 208, 0.696);
     justify-content: space-evenly;
-
 }
 
 .section_menu>p {
@@ -62,8 +60,7 @@ form{
     flex-direction: column;
     width: 100%;
     height: 80%;
-    margin-left: 10%;
-    
+    margin-left: 10%; 
 }
 
 .section {
@@ -71,7 +68,6 @@ form{
 }
 
 .sectionVisible {
-    
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -88,23 +84,29 @@ section>input[type="text"],section>input[type="number"],section>input[type="emai
 }
 
 form>:nth-child(3){ 
-    flex-direction: column;
-    justify-content: space-around;
     width: 100%;
-    
 }
-form>:nth-child(3)>label{ 
-    
-    font-size: max(13px,1.2vw);
+
+form>section>label{    
+    font-size: max(17px,1.1vw);
     font-weight: bold;
-    /* margin-right:120px ; */
 }
+
+form>:nth-child(3)>label{ 
+    color:black;
+    font-size: max(20px,1.2vw);
+    font-style: italic;
+}
+
+form>:nth-child(3)>label:nth-child(1){ 
+    color:green;
+}
+
 section>input[type="checkbox"]{
     width: 100%;
     position: relative;
-    bottom: 15%;
-    left: 25%;
-    margin-left: 10%;
+    bottom: 12%;
+    margin-left: 35%;
 }
 
 .details{
@@ -114,14 +116,12 @@ section>input[type="checkbox"]{
     z-index: 99999;
     top:0rem;
     right:0rem;
-    /* animation: details .4s; */
     background-color: rgba(0, 0, 0, 0.5);
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 100vh;
 }
-
 
 .details>img{
     animation: details .4s;
@@ -160,23 +160,22 @@ img {
     width: 100%;
 }
 
-button:hover {
-    cursor: pointer;
-    background-color: rgb(239, 224, 241);
-    transition: all 0.6s;
-    font-size: 0.8em;
-}
-
 .container_btn>button {
-   
     list-style: none;
     width: 100%;
     max-width: 100px;
     height: max(10px, 6vh);
+    border-radius: 10px;
     border-color: red;
-    position: relative;
-    margin: 10% 10% 0 0 ;
+    background-color: white;
+    margin: 10% 10% 0 0;
+    font-weight: bold;
+}
 
+button:hover {
+    cursor: pointer;
+    background-color: rgb(239, 224, 241);
+    transition: all 0.6s;
 }
 
 input:focus {
@@ -184,4 +183,79 @@ input:focus {
     border: 0 none;
     border-bottom: 1px solid black;
     outline: 0;
+}
+
+@media(max-width:980px){
+    .form_container {
+   
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        background-color: white;
+        text-align: center;
+        border-radius:0;
+        box-shadow: none;
+    }
+    .section_menu {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 5%;
+        /* background-image: url(/images/background_menu.jpg); */
+        margin:1% auto;
+        border-radius: 0;
+        color: rgba(208, 208, 208, 0.696);
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    
+    .section_menu>p {
+        margin-top: 0%;
+    }
+
+    form{
+        display: flex;
+        width: 100%;
+        height: 80%;
+        margin-left: 0; 
+    }
+    
+    .sectionVisible {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    section>input[type="text"],section>input[type="number"],section>input[type="email"],section>input[type="tel"]{
+        width: 80%;
+        border: none;
+        border-bottom: 1px solid;
+    }
+
+    form>:nth-child(3)>label:nth-child(1){ 
+        color:green;
+    }
+    
+    section>input[type="checkbox"]{
+        bottom: 0%;
+        margin-left: 0;
+    }
+
+    img {
+        width: 100%;
+        height: 20%;
+    }
+    
+    .container_btn>button {
+        margin: 0 ;    
+    }
+
+    button:hover {
+        background-color:white;
+        transition: none;
+    }
+
 }
