--- a/dating_registration_form/style/style.css
+++ b/dating_registration_form/style/style.css
@@ -185,6 +185,57 @@ input:focus {
     outline: 0;
 }
 
+#feedbackSuccess,#feedbackError{
+    position: fixed;
+    left: 1rem;
+    top: 1rem;
+    right: 1rem;
+    border-radius: 5px;
+    font-weight: bold;
+    justify-content: center;
+    display: flex;
+    padding: 1rem;
+    align-items: center;
+    font-size: 2em;
+    transform: translateY(calc(-2rem - 100%));
+    transition: transform .3s;
+    height: 10%;
+}
+#feedbackSuccess{
+    background-color: #59ce36;
+    color: #215113;
+}
+
+#feedbackError{
+    background-color: #ef9595;
+    color: #652f2f;
+}
+#feedbackSuccess p,#feedbackError p{
+    margin: .5em auto;
+}
+#feedbackSuccess button,#feedbackError button{
+    background-color: transparent;
+    border: none;
+    font-size: 1.25em;
+    
+}
+#feedbackSuccess button{
+    color: #215113;
+}
+
+#feedbackError button{
+    color: #652f2f;
+}
+
+#feedbackSuccess.show{
+    transform: translateY(0px);
+}
+
+#feedbackSuccess.show2{
+    transform:translateY(0px);
+}
+
+
 @media(max-width:980px){
     .form_container {
    
