--- a/dating_registration_form/style/style.css
+++ b/dating_registration_form/style/style.css
@@ -307,7 +307,6 @@ footer{
         border-right:none;
         border-top: none;
         border-bottom: none;
-        border-bottom: 1px solid white;
         border-radius: 0;
         justify-content: space-evenly;
     }
@@ -344,7 +343,7 @@ footer{
     }
 
     .container_btn>button {
-        margin: 0;
+        margin: 0px;
     }
 
     button:hover {
